Added simple OR Tools example

--- a/orlab/docs/01-verify.ipynb
+++ b/orlab/docs/01-verify.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# OR-Tools Verification\n",
     "\n",
-    "This notebook verifies that OR-Tools is properly installed and working."
+    "This notebook verifies that OR-Tools is properly installed and working by running a very simple linear example."
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7a873b3a",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8172f224",
    "metadata": {},
    "outputs": [],
@@ -99,17 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "48bced5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ortools.linear_solver.pywraplp.Solver; proxy of <Swig Object of type 'operations_research::MPSolver *' at 0x000001C5598ECA20> >"
+       "<ortools.linear_solver.pywraplp.Solver; proxy of <Swig Object of type 'operations_research::MPSolver *' at 0x00000184192CC120> >"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,17 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d87869bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,35 +161,123 @@
     "\n",
     "Our first 2 constraints, the ones that limit the possible values for x and y, were already done for us with the way we declared the variables.\n",
     "\n",
-    "So now we need to do the constraint `x + y <= 2`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2d828048",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'infinity' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m constraint = solver.Constraint(-\u001b[43minfinity\u001b[49m, \u001b[32m2\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mc2\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'infinity' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "constraint = solver.Constraint(-infinity, 2, 'c2')"
+    "So now we need to do the constraint `x + y <= 2`.\n",
+    "\n",
+    "Whenever you add a constraint to the solver, you're implicitly creating a linear constant in this form:\n",
+    "> lower_bound <= (sum of coefficients * variable) <= upper_bound\n",
+    "\n",
+    "So to make this constraint we need to specify the upper and lower bound, and give it a list of things to sum."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2d828048",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Here's how we add the constraint x + y <= 2:\n",
+    "infinity = solver.infinity()\n",
+    "constraint = solver.Constraint(-infinity, 2, 'ct') # This specifies the lower and upper bound.\n",
+    "constraint.SetCoefficient(x_var, 1) # Adds: 1 * x_var\n",
+    "constraint.SetCoefficient(y_var, 1) # Adds: 1 * y_var\n",
+    "# The `+` is implicit. So this means x + y <= 2.\n",
+    "\n",
+    "solver.NumConstraints()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e95bd9f6",
+   "metadata": {},
+   "source": [
+    "### Objective Function\n",
+    "\n",
+    "The object function is the function we're trying to optimize for, in this case we want to **maximize** `3x + y`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "4f408b53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Objective function: maximize 3x + y\n",
+    "objective = solver.Objective()\n",
+    "objective.SetCoefficient(x_var, 3) # Adds term 3 * x_var\n",
+    "objective.SetCoefficient(y_var, 1) # Adds term 1 * y_var\n",
+    "objective.SetMaximization()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7c7641f",
+   "metadata": {},
+   "source": [
+    "### Invoke Solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f327c3ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_status = solver.Solve()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88276cdb",
+   "metadata": {},
+   "source": [
+    "### Show Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "86821a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solved! Solution:\n",
+      "Objective value = 4.0\n",
+      "x = 1.0\n",
+      "y = 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_solved = result_status == pywraplp.Solver.OPTIMAL\n",
+    "is_feasible = result_status != pywraplp.Solver.INFEASIBLE\n",
+    "if is_solved:\n",
+    "    print('Solved! Solution:')\n",
+    "    print('Objective value =', objective.Value())\n",
+    "    print('x =', x_var.solution_value())\n",
+    "    print('y =', y_var.solution_value())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d9948a0",
    "metadata": {},
    "outputs": [],
    "source": []
