--- a/orlab/docs/05-exercise5.ipynb
+++ b/orlab/docs/05-exercise5.ipynb
@@ -320,6 +320,56 @@
    "cell_type": "markdown",
    "id": "65cdbf1d",
    "metadata": {},
+   "source": [
+    "Another way of thinking about this data structure:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4f55a3ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   lamp timer\n",
+      " 1. [ ] [x]\n",
+      " 2. [ ] [x]\n",
+      " 3. [ ] [x]\n",
+      " 4. [ ] [x]\n",
+      " 5. [ ] [x]\n",
+      " 6. [ ] [x]\n",
+      " 7. [x] [ ]\n",
+      " 8. [x] [ ]\n",
+      " 9. [x] [ ]\n",
+      "10. [ ] [ ]\n",
+      "11. [ ] [ ]\n",
+      "12. [ ] [ ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('   ' + ' '.join(all_items))\n",
+    "for slot in all_slots:\n",
+    "    item_strs = []\n",
+    "    for item in all_items:\n",
+    "        #print(f'vars[{slot},{item}]={make_vars[slot, item].solution_value()}')\n",
+    "        if make_vars[slot, item].solution_value():\n",
+    "            item_strs.append('[x]')\n",
+    "        else:\n",
+    "            item_strs.append('[ ]')\n",
+    "    item_line = ' '.join(item_strs)\n",
+    "    print(f'{slot + 1:2}. {item_line}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f06238f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
