--- a/orlab/docs/05-exercise5.ipynb
+++ b/orlab/docs/05-exercise5.ipynb
@@ -365,11 +365,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "3f06238f",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Modelling Production Line Compatibility"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4486afe0",
+   "metadata": {},
+   "source": [
+    "I considered a few ways to model the production line compatibility:\n",
+    "1. **Normal constraint approach**.  For products that cannot be produced on a given line, we make constraints that say the sum of those decision variables must be zero.  Consider the item \"Premium Boards\" which can only be made on line A.  We can introduce constraints that say that the total production of these boards on line B and C must be zero.  \n",
+    "2. **In Production Coefficients**.  When we are going to make an item on a line, we're going to introduce a constraint that says the total items produced >= the demand for that item.  If I line can't manufacture an item, we can multiply it by `can_produce(line, item)` which is 0 or 1, and thus we won't count things in the plan that are produced on an incompatible line. This will make the solver automatically not select these plan items, because they won't satisfy any demand.\n",
+    "3. **\"Hard Coded\" Decision Variables**.  If a given line can't produce an item, we can put in a numeric 0 instead of a decision variable.  If we use this technique we'll need to remember to check if a variable is a number instead of a decision variable, and either need to use the value as a number directly, or call `.solution_value()` on it.\n",
+    "4. **Sparse Decision Variables**.  The is a variant of solution 3. If we determine that a given line cannot produce a given item, we *don't generate a decision variable for it*.  Then we don't have to make a constraint to eliminate it like we did in solution 1 above.  But we do need to check if `x_vars[line, slot, item] is not None` before we try to use it, since not all of them will be set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23fc560c",
+   "metadata": {},
    "source": []
   }
  ],
