Addlesson notes about modeling for one-time setup costs in production scheduling

--- a/orlab/docs/05-exercise5.ipynb
+++ b/orlab/docs/05-exercise5.ipynb
@@ -388,6 +388,45 @@
    "cell_type": "markdown",
    "id": "23fc560c",
    "metadata": {},
+   "source": [
+    "## Modelling One-Time Setup Costs\n",
+    "\n",
+    "We have this challenge in the rules of the problem that say that we must pay a one-time setup cost for a given production line if we're going to make any of an item on a production line.\n",
+    "\n",
+    "To do this, we'll introduce a set of decision variables, one per combination of line + product, which can be either 0 or 1.  Then we'll add constraints to force those values to be turned on if and only if any of the items are made on those lines.\n",
+    "\n",
+    "In simple terms, we want to introduce a set of variables called `pay_setup[line, item]`. Then we want to do something like `IF make[slot, line, item] = 1 THEN pay_setup[line, item] = 1`.  But unfortunately we can't do that directly, so we have to coax the solver into doing that for us by adding constraints.  There's a trick that's commonly used for one-time setup situations like this as follows.\n",
+    "\n",
+    "So we'll do 3 steps:\n",
+    "1. **Introduce decision variables** `pay_setup[line, item]` which are 0-1 binary variables indicating if we're paying the setup cost on the given line for the given product.\n",
+    "2. **Introduce constraints.**  We will make a constraint for every `make[slot, line, item] <= pay_setup[line, item]`. This will force the pay_setup to be set to 1 for the line, item if *any* of the `make[slot, line, item]` are 1.  There's actually a trick we must do here, because we must have all the variables on the left side of the inequality. (If we needed variables on both sides of the inequality this would be quadratic instead of linear.) To do that, subtract `pay_setup` from both sides, which is why you'll see the coefficient go negative. So the constraint we'll actually do will be structured as `make[slot, line, item] - pay_setup[line, item] <= 0`. See more details about this constraint expression below.\n",
+    "3. **Add costs to objective function**.  We're actually maximizing profit in this problem, so this means we will need to update our profit objective function to *subtract* the setup costs, by supplying negative coefficients for the setup costs as part of our objective function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8549d090",
+   "metadata": {},
+   "source": [
+    "#### The setup cost constraint expression\n",
+    "We said that we will create constraints to ensure that we pay the setup costs.\n",
+    "`make[slot, line, item] - pay_setup[line, item] <= 0`\n",
+    "\n",
+    "There are 4 possible values for the `make` and `setup` variables above, since both of those are binary variables:\n",
+    "* `0 - 0 = 0` : Not making anything, not paying setup costs\n",
+    "* `0 - 1 = -1` : Not making anything, but paid setup costs in another slot\n",
+    "* `1 - 0 = 1` : Making something but not paying setup costs. Not OK!\n",
+    "* `1 - 1 = 0` : Making something and paying the setup costs\n",
+    "\n",
+    "To express this constraint, we need to set a minimum and maximum value for the constraint.  When we create a constraint we say `constraint = solver.Constraint(min_value, max_value, name)`. Note that the min and max values there are *for the expression* not for binary values.  We don't actually care about the minimum value, we can leave that unconstrained.  So we'll pass `-infinity` there to signify to the world that this constraint is not about the lower bound.  We could use -1 there and it would work, but we're using `-infinity` as a signal to the world that we don't care about that half of the constraint.\n",
+    "\n",
+    "We will however use `0` as the upper bound, to indicate the this **expression** must come out to at most 0.  This will force the solver to pay the setup costs.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9268c465",
+   "metadata": {},
    "source": []
   }
  ],
