--- a/orlab/docs/05-exercise5.ipynb
+++ b/orlab/docs/05-exercise5.ipynb
@@ -418,7 +418,12 @@
     "* `1 - 0 = 1` : Making something but not paying setup costs. Not OK!\n",
     "* `1 - 1 = 0` : Making something and paying the setup costs\n",
     "\n",
-    "To express this constraint, we need to set a minimum and maximum value for the constraint.  When we create a constraint we say `constraint = solver.Constraint(min_value, max_value, name)`. Note that the min and max values there are *for the expression* not for binary values.  We don't actually care about the minimum value, we can leave that unconstrained.  So we'll pass `-infinity` there to signify to the world that this constraint is not about the lower bound.  We could use -1 there and it would work, but we're using `-infinity` as a signal to the world that we don't care about that half of the constraint.\n",
+    "To express this constraint, we need to set a minimum and maximum value for the constraint.  When we create a constraint we use code like this:\n",
+    "```py\n",
+    "constraint = solver.Constraint(min_value, max_value, name)\n",
+    "```\n",
+    "\n",
+    "Note that the min and max values there are *for the expression* not for binary values.  We don't actually care about the minimum value, we can leave that unconstrained.  So we'll pass `-infinity` there to signify to the world that this constraint is not about the lower bound.  We could use -1 there and it would work, but we're using `-infinity` as a signal to the world that we don't care about that half of the constraint.\n",
     "\n",
     "We will however use `0` as the upper bound, to indicate the this **expression** must come out to at most 0.  This will force the solver to pay the setup costs.\n"
    ]
