ex5 do not pay setup costs unless used

--- a/orlab/docs/05-exercise5.ipynb
+++ b/orlab/docs/05-exercise5.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "79a141c1",
    "metadata": {},
    "outputs": [],
@@ -433,6 +433,53 @@
    "id": "9268c465",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9f4840e",
+   "metadata": {},
+   "source": [
+    "## Important Discovery: Setup Cost Constraints Need Both Directions\n",
+    "\n",
+    "After implementing and testing, we discovered that the simple constraint `make[slot, line, item] - pay_setup[line, item] <= 0` is **not sufficient** on its own!\n",
+    "\n",
+    "The issue is that this constraint only enforces one direction:\n",
+    "- **IF** we make something, **THEN** we must pay setup\n",
+    "\n",
+    "But it doesn't enforce the reverse:\n",
+    "- **IF** we don't make anything, **THEN** we should not pay setup\n",
+    "\n",
+    "### Why the optimization doesn't save us\n",
+    "\n",
+    "You might think \"the solver is maximizing profit, so it won't pay unnecessary setup costs.\" However, the solver can find multiple optimal solutions, and it might arbitrarily choose one where setup costs are paid even when no production occurs.\n",
+    "\n",
+    "### The complete solution\n",
+    "\n",
+    "We need **both** constraints to create a proper logical equivalence:\n",
+    "\n",
+    "1. **Force setup when producing**: `make[slot, line, part] <= pay_setup[part, line]` for each slot\n",
+    "2. **Prevent setup when not producing**: `pay_setup[part, line] <= sum(make[slot, line, part] for all slots)`\n",
+    "\n",
+    "This creates the logical relationship: `pay_setup[part, line] = 1 ⟺ (total production > 0)`\n",
+    "\n",
+    "### Implementation\n",
+    "\n",
+    "```python\n",
+    "# Constraint 1: If we make anything, we must pay setup\n",
+    "for slot in all_slots:\n",
+    "    constraint = solver.Constraint(-infinity, 0, f'setup_force_{line}_{part}_{slot}')\n",
+    "    constraint.SetCoefficient(x_vars[slot, line, part], 1)\n",
+    "    constraint.SetCoefficient(pay_setup[part, line], -1)\n",
+    "\n",
+    "# Constraint 2: If we don't make anything, we don't pay setup  \n",
+    "constraint = solver.Constraint(-infinity, 0, f'setup_prevent_{line}_{part}')\n",
+    "constraint.SetCoefficient(pay_setup[part, line], 1)\n",
+    "for slot in all_slots:\n",
+    "    constraint.SetCoefficient(x_vars[slot, line, part], -1)\n",
+    "```\n",
+    "\n",
+    "Without both constraints, you may see spurious setup costs being paid for production lines that aren't actually producing that item!"
+   ]
   }
  ],
  "metadata": {
