--- a/orlab/docs/05-equations.ipynb
+++ b/orlab/docs/05-equations.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "47dc8f86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ortools.sat.python import cp_model\n",
+    "from ortools.linear_solver import pywraplp\n",
     "import pandas as pd"
    ]
   },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "a2aae798",
    "metadata": {},
    "outputs": [],
@@ -158,33 +158,85 @@
     "target_fill_ratio = 0.9  # We want the tanks 90% full to the extent we can.\n",
     "all_tanks = range(len(tank_capacities))\n",
     "\n",
-    "demands = [11, 56, 40, 2] # The proposed demands design to fit into particular tanks.\n",
+    "all_demands = [11, 56, 40, 2] # The proposed demands design to fit into particular tanks.\n",
     "expected_tanks = [0, 0, 1, 2] # The tank numbers we expect these to go to, for checking"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "ca32c747",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = cp_model.CpModel()"
+    "model = pywraplp.Solver.CreateSolver(\"CBC\")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5f3bdf1d",
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c6254d30",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "tank_capacities"
+    "# Decision variables\n",
+    "x_vars = {} # x_vars[demand, tank]: For each demand, which tank do we put it in\n",
+    "for demand in all_demands:\n",
+    "    for tank in all_tanks:\n",
+    "        x_vars[demand, tank] = model.BoolVar(f'fill_{demand}_{tank}')\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "81315cb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Constraint: Only one tank is chosen per demand\n",
+    "for demand in all_demands:\n",
+    "    tanks_used = [x_vars[demand, tank] for tank in all_tanks]\n",
+    "    model.Add(sum(tanks_used) == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d484a047",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Objective: get tanks close to target level\n",
+    "tank_deviations = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d9238e0",
+   "metadata": {},
+   "source": [
+    "We want to model `deviation = abs(target_level - fill_level)`, but we are also trying to keep things linear.  `abs()` is not linear, so we need to do a trick to allow us to model this.  The trick is to introduce an extra decision variable for each tank `deviation` and bind it to the absolute value with two inequalities which *are* linear:\n",
+    "* *deviation* >= *expr*\n",
+    "* *deviation* >= *-expr*\n",
+    "\n",
+    "Now if we minimize `deviation` that will be equivalent to minimizing `|expr|`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0145bacf",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccaa5d90",
+   "metadata": {},
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
