--- a/orlab/docs/06-tank-utilization.ipynb
+++ b/orlab/docs/06-tank-utilization.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "id": "47dc8f86",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,8 @@
     "from typing import List\n",
     "\n",
     "from ortools.linear_solver import pywraplp\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from orlab.exercise6 import tank_solve"
    ]
   },
   {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6beec4b8",
    "metadata": {},
    "outputs": [
@@ -137,7 +138,7 @@
        "2                         Add 2  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "a2aae798",
    "metadata": {},
    "outputs": [],
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "ca32c747",
    "metadata": {},
    "outputs": [],
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "c6254d30",
    "metadata": {},
    "outputs": [],
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "81315cb6",
    "metadata": {},
    "outputs": [],
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "d484a047",
    "metadata": {},
    "outputs": [],
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "5bf54270",
    "metadata": {},
    "outputs": [
@@ -336,7 +337,7 @@
        "3       100         95              0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "b0b4a252",
    "metadata": {},
    "outputs": [],
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "5f680c90",
    "metadata": {},
    "outputs": [
@@ -484,7 +485,7 @@
        "3             0          0         0.000000        0                0  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "eae70ed2",
    "metadata": {},
    "outputs": [
@@ -612,7 +613,7 @@
        "3             2          2         0.021053        1               93  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "id": "025b329f",
    "metadata": {},
    "outputs": [
@@ -738,7 +739,7 @@
        "3       100         95              0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,17 +766,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "id": "a3536b4e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 40, 56, 11]"
+       "[2, 11, 40, 56]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,90 +802,26 @@
    "source": [
     "Our solver will be a function that takes in the world state as a dataframe and the demands as a list.\n",
     "\n",
-    "For modelling the results, we'll return a dataframe so this can be easily visualized:"
+    "For modelling the results, we'll return a dataframe so this can be easily visualized."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "982189ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tank_solve(tanks_df: pd.DataFrame, demands: List[int]) -> pd.DataFrame:\n",
-    "    model = pywraplp.Solver.CreateSolver('SCIP')\n",
-    "    all_tanks = tanks_df.index\n",
-    "    all_demands = range(len(demands)) # Sequence numbers for demands.\n",
-    "    tank_remaining = tanks_df.max_level - tanks_df.current_level\n",
-    "    tank_max_levels = tanks_df.max_level\n",
-    "\n",
-    "    # Decision variables\n",
-    "    x_vars = {} # key: (tank, demand). True if we are serving this demand in this tank.\n",
-    "    for tank in all_tanks:\n",
-    "        for demand in all_demands:\n",
-    "            x_vars[tank, demand] = model.BoolVar(f'tank_{tank}_demand_{demand}')\n",
-    "\n",
-    "    # Follower decision variables:\n",
-    "    # used_vars[tank] true if we put something into a given tank.\n",
-    "    # stranded_vars[tank] set to the remaining capacity for a tank if we used it.\n",
-    "    used_vars = {}\n",
-    "    stranded_vars = {}\n",
-    "    for tank in all_tanks:\n",
-    "        used_vars[tank] = model.BoolVar(f'tank_used_{tank}')\n",
-    "        # Link used_vars to be true if anything is placed in a tank.\n",
-    "        # used_vars is the logical OR of all the demands in the tank.\n",
-    "        # In linear programming, we do 2 things for that:\n",
-    "        #     used_vars[tank] >= x_vars[tank, demand]: set it if a demand goes in a tank.\n",
-    "        #     used_vars[tank] <= sum of all tank demands: to keep it zero when possible.\n",
-    "        demands_in_tank = [x_vars[tank, demand] for demand in all_demands]\n",
-    "        for demand in all_demands:\n",
-    "            model.Add(used_vars[tank] >= x_vars[tank, demand])\n",
-    "        model.Add(used_vars[tank] <= sum(demands_in_tank))\n",
-    "\n",
-    "        stranded_vars[tank] = model.NumVar()\n",
-    "    \n",
-    "\n",
-    "    # Constraint: Each demand must be placed exactly once.\n",
-    "    for demand in all_demands:\n",
-    "        model.Add(sum(x_vars[tank, demand] for tank in all_tanks) == 1)\n",
-    "\n",
-    "    # Constraint: tanks cannot exceed capacity\n",
-    "    stranded_capacity = 0\n",
-    "    for tank in all_tanks:\n",
-    "        capacity_added = sum([x_vars[tank, demand] * demands[demand]\n",
-    "                          for demand in all_demands])\n",
-    "        final_remaining = tank_remaining[tank] - capacity_added\n",
-    "        model.Add(final_remaining >= 0)\n",
-    "\n",
-    "        stranded_capacity += used_vars[tank] * final_remaining\n",
-    "    \n",
-    "    # Objective: minimize stranded capacity: unused capacity when we touch a tank.\n",
-    "    objective = model.Objective()\n",
-    "    for tank in all_tanks:\n",
-    "        ...\n",
-    "    model.Minimize(stranded_capacity)\n",
-    "    status = model.Solve()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "id": "88ddcb65",
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "",
+     "evalue": "in method 'Solver_NumVar', argument 3 of type 'double'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[113]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtank_solve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtanks_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdemands\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[112]\u001b[39m\u001b[32m, line 40\u001b[39m, in \u001b[36mtank_solve\u001b[39m\u001b[34m(tanks_df, demands)\u001b[39m\n\u001b[32m     37\u001b[39m     final_remaining = tank_remaining[tank] - capacity_added\n\u001b[32m     38\u001b[39m     model.Add(final_remaining >= \u001b[32m0\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m     stranded_capacity += \u001b[43mused_vars\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtank\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mfinal_remaining\u001b[49m\n\u001b[32m     42\u001b[39m \u001b[38;5;66;03m# Objective: minimize stranded capacity: unused capacity when we touch a tank.\u001b[39;00m\n\u001b[32m     43\u001b[39m model.Minimize(stranded_capacity)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32me:\\proj\\solver-tutorials\\orlab\\.venv\\Lib\\site-packages\\ortools\\linear_solver\\pywraplp.py:996\u001b[39m, in \u001b[36msetup_variable_operator.<locals>.<lambda>\u001b[39m\u001b[34m(self, *args)\u001b[39m\n\u001b[32m    994\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msetup_variable_operator\u001b[39m(opname):\n\u001b[32m    995\u001b[39m   \u001b[38;5;28msetattr\u001b[39m(Variable, opname,\n\u001b[32m--> \u001b[39m\u001b[32m996\u001b[39m           \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;28mself\u001b[39m, *args: \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mVariableExpr\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mopname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32me:\\proj\\solver-tutorials\\orlab\\.venv\\Lib\\site-packages\\ortools\\linear_solver\\python\\linear_solver_natural_api.py:133\u001b[39m, in \u001b[36mLinearExpr.__mul__\u001b[39m\u001b[34m(self, cst)\u001b[39m\n\u001b[32m    132\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__mul__\u001b[39m(\u001b[38;5;28mself\u001b[39m, cst):\n\u001b[32m--> \u001b[39m\u001b[32m133\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mProductCst\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcst\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32me:\\proj\\solver-tutorials\\orlab\\.venv\\Lib\\site-packages\\ortools\\linear_solver\\python\\linear_solver_natural_api.py:196\u001b[39m, in \u001b[36mProductCst.__init__\u001b[39m\u001b[34m(self, expr, coef)\u001b[39m\n\u001b[32m    194\u001b[39m     \u001b[38;5;28mself\u001b[39m.__coef = coef\n\u001b[32m    195\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m196\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m\n",
-      "\u001b[31mTypeError\u001b[39m: "
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtank_solve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtanks_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdemands\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mE:\\proj\\solver-tutorials\\orlab\\src\\orlab\\exercise6.py:23\u001b[39m, in \u001b[36mtank_solve\u001b[39m\u001b[34m(tanks_df, demands)\u001b[39m\n\u001b[32m     21\u001b[39m stranded_vars = {}\n\u001b[32m     22\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m tank \u001b[38;5;129;01min\u001b[39;00m all_tanks:\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m     stranded_vars[tank] = \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mNumVar\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtank_remaining\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtank\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mstranded_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mtank\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# Constraint: Each demand must be placed exactly once.\u001b[39;00m\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m demand \u001b[38;5;129;01min\u001b[39;00m all_demands:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32me:\\proj\\solver-tutorials\\orlab\\.venv\\Lib\\site-packages\\ortools\\linear_solver\\pywraplp.py:188\u001b[39m, in \u001b[36mSolver.NumVar\u001b[39m\u001b[34m(self, lb, ub, name)\u001b[39m\n\u001b[32m    186\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mNumVar\u001b[39m(\u001b[38;5;28mself\u001b[39m, lb, ub, name):\n\u001b[32m    187\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"Creates a continuous variable.\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m188\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_pywraplp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSolver_NumVar\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mub\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: in method 'Solver_NumVar', argument 3 of type 'double'"
      ]
     }
    ],
@@ -894,8 +831,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6ad9b338",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>capacity</th>\n",
+       "      <th>max_level</th>\n",
+       "      <th>current_level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   capacity  max_level  current_level\n",
+       "0       100         95             20\n",
+       "1       100         95              0\n",
+       "2       100         95             80\n",
+       "3       100         95              0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tanks_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c4f94c79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = tanks_df.max_level.astype(int) - tanks_df.current_level.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d9e4e177",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(95)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a91024f9",
    "metadata": {},
    "outputs": [],
    "source": []
